--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to Pages
 
 on:
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
